// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SkeletonPulse Snapshots No props 1`] = `
<div
  className="sc-AxjAm ibqlzg"
/>
`;

exports[`SkeletonPulse Snapshots with className 1`] = `
<div
  className="sc-AxjAm ibqlzg className"
/>
`;
